--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
 		"start": "webpack serve"
 	},
 	"dependencies": {
+		"bootstrap": "^5.2.2",
 		"core-js": "^3.21.1",
 		"react": "^17.0.2",
+		"react-bootstrap": "^2.5.0",
+		"react-bootstrap-icons": "^1.9.1",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^6.3.0"
 	},
